--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,5 @@
 <resources>
     <string name="app_name">Bootstrap</string>
-    <string name="action_settings">Settings</string>
-    <string name="section_format">Hello World from section: %1$d</string>
 
     <!-- part 1 -->
     <string name="welcome_to">Welcome to the</string>
@@ -13,16 +11,16 @@
     <string name="space_pitch">Balance your professional and personal life with multiple Spaces</string>
 
     <string name="space_features_title">What you can do with a Work Space:</string>
-    <string name="space_features_list">
-        &#8226; Keep your work apps and accounts separate from your personal apps and accounts \n
-        &#8226; Switch between Spaces using different PINs\n
-        &#8226; Information is encrypted in each Space\n
-        &#8226; Let IT manage your Work Space and nothing else.\n
-        &#8226; Protect work data from malware and viruses.\n
-    </string>
 
     <!-- part 3 -->
     <string name="space_ready">Your Work Space is ready</string>
     <string name="space_instructions">Tap the icon to switch between your personal and work Spaces</string>
     <string name="launch">Launch</string>
+    <string-array name="space_features">
+        <item>Keep your work apps and accounts separate from your personal apps and accounts.</item>
+        <item>Switch between Spaces using different PINs.</item>
+        <item>Information is encrypted in each Space.</item>
+        <item>Let IT manage your Work Space and nothing else.</item>
+        <item>Protect work data from malware and viruses.</item>
+    </string-array>
 </resources>
