signed, proguarded, switched to nation sky

--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -5,7 +5,7 @@
     <!-- part 1 -->
     <string name="welcome_to">欢迎来到</string>
     <string name="space_name">工作空间</string>
-    <string name="space_subtitle">中科创达为您提供</string>
+    <string name="space_subtitle">国信灵通为您提供</string>
     <string name="next">下一步</string>
 
     <!-- part 2 -->
