--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <!-- part 1 -->
     <string name="welcome_to">Welcome to the</string>
     <string name="space_name">Work Space</string>
-    <string name="space_subtitle">Powered by Thundersoft</string>
+    <string name="space_subtitle">Powered by Nation Sky</string>
     <string name="next">Next</string>
 
     <!-- part 2 -->
