--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,13 +8,14 @@
     <string name="next">Next</string>
 
     <!-- part 2 -->
-    <string name="space_pitch">Balance your professional and personal life with multiple Spaces</string>
+    <string name="space_pitch">Balance your professional and personal life with multiple Spaces.</string>
 
     <string name="space_features_title">What you can do with a Work Space:</string>
 
     <!-- part 3 -->
+    <string name="space_content_downloading">Downloading Space content</string>
     <string name="space_ready">Your Work Space is ready</string>
-    <string name="space_instructions">Tap the icon to switch between your personal and work Spaces</string>
+    <string name="space_instructions">Tap the icon to switch between your personal and work Spaces.</string>
     <string name="launch">Launch</string>
     <string-array name="space_features">
         <item>Keep your work apps and accounts separate from your personal apps and accounts.</item>
