--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,6 +27,6 @@
 
     <!-- part 4 -->
     <string name="fragment4_title">Work Space Ready</string>
-    <string name="space_instructions">Tap the icon to switch between your personal and work Spaces.</string>
+    <string name="space_instructions">Tap the icon to switch between your personal and work Space.</string>
 
 </resources>
