DEV-44 Until completed, a persistent notification prompts users to return to the bootstrap

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,8 @@
     <!-- part 3 -->
     <string name="launch">Launch</string>
 
-    <!-- part 4 -->
+    <string name="notification_continue_title">Setup Work Space</string>
+    <string name="notification_continue_text">Press to continue setting up your Work Space</string>
 
     <!-- recommended apps -->
     <string name="recommended_apps_title1">Recommended Apps</string>
