DEV-1109: set background unstretched

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,8 +4,8 @@
 
     <string name="launch">Launch</string>
 
-    <string name="notification_continue_title">Setup Work Space</string>
-    <string name="notification_continue_text">Press to continue setting up your Work Space</string>
+    <string name="notification_continue_title">Setup Fashion Space</string>
+    <string name="notification_continue_text">Press to continue setting up your Fashion Space</string>
 
     <string name="recommended_apps_title1">Recommended Apps</string>
     <string name="recommended_apps_title2">Work Space Ready</string>
