DEV-1110: pre-load webview with viewpager mode

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="notification_continue_text">Press to continue setting up your Fashion Space</string>
 
     <string name="recommended_apps_title1">Recommended Apps</string>
-    <string name="recommended_apps_title2">Work Space Ready</string>
+    <string name="recommended_apps_title2">Fashion Space Ready</string>
 
     <string name="emm_select_title">Welcome to your Work Space</string>
     <string name="emm_instructions">Please select the Enterprise Mobility Management tool used by your company.</string>
