--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name" translatable="false"></string>
+    <string name="app_name" translatable="false">Enterprise Space</string>
 
     <string name="launch">Launch</string>
 
-    <string name="notification_continue_title">Setup Fashion Space</string>
-    <string name="notification_continue_text">Press to continue setting up your Fashion Space</string>
+    <string name="notification_continue_title">Setup Enterprise Space</string>
+    <string name="notification_continue_text">Press to continue setting up your Enterprise Space</string>
 
     <string name="recommended_apps_title1">Recommended Apps</string>
-    <string name="recommended_apps_title2">Fashion Space Ready</string>
+    <string name="recommended_apps_title2">Recommended Apps</string>
 
     <string name="emm_select_title">Welcome to your Work Space</string>
     <string name="emm_instructions">Please select the Enterprise Mobility Management tool used by your company.</string>
@@ -17,12 +17,6 @@
     <string name="thundersoft">Thundersoft</string>
     <string name="nationsky">Nation Sky</string>
     <string name="no_emm">Manage my own Work Space</string>
-
-    <string name="slogan">Fashion. Beauty. Lifestyle.</string>
     <string name="welcome">Welcome to the</string>
-    <string name="title">Fashion Space</string>
-    <string name="crown">\u265A</string>
-    <string name="square">\u25A0</string>
-    <string name="description1">Receive exclusive offers from the top online retailers in India.</string>
-    <string name="description2">Get the latest fashion trends, beauty tips and industry news delivered directly to your Space.</string>
+    <string name="title" translatable="false">Enterprise Space</string>
 </resources>
