DEV-1253 New app restriction configurable design

--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -2,17 +2,12 @@
 <resources>
     <string name="launch">启动</string>
 
-    <string name="notification_continue_title">设置工作空间Setup Work Space</string>
+    <string name="notification_continue_title">设置工作空间</string>
     <string name="notification_continue_text">按此键继续设置您的工作空间</string>
 
     <string name="recommended_apps_title1">推荐APP</string>
     <string name="recommended_apps_title2">工作空间已就绪</string>
 
-    <string name="emm_select_title">欢迎来到工作空间</string>
-    <string name="emm_instructions">请选择贵司使用的企业移动化管理工具</string>
     <string name="skip">跳过</string>
     <string name="start">开始</string>
-    <string name="thundersoft">中科创达</string>
-    <string name="nationsky">国信灵通 </string>
-    <string name="no_emm">管理我的工作空间</string>
 </resources>
